# ohoros-homework

./: .gitignore  README.md
informations/: make_app.py  实验1-指导手册.docx
informations/app/: BUILD.gn  uart_tcp_re.rar
informations/app/adc_human/: BUILD.gn  adc_human.c
informations/app/adc_light/: BUILD.gn  adc_light.c
informations/app/adc_light-bak/: BUILD.gn  README.md  adc_light.c
informations/app/adc_light-bak/adc_driver/: apply_adc_driver_patch.sh  替换文件步骤.txt
informations/app/adc_light-bak/adc_driver/替换1/adc/: adc_porting.c  adc_porting.h
informations/app/adc_light-bak/adc_driver/替换2/adc/: adc.c
informations/app/adc_light-bak/adc_driver/替换3/adc/: hal_adc.c  hal_adc.h
informations/app/adc_light-bak/adc_driver/替换3/adc/v154/: hal_adc_v154.c  hal_adc_v154.h  hal_adc_v154_regs_def.h  hal_adc_v154_regs_op.c  hal_adc_v154_regs_op.h
informations/app/adc_light-bak/adc_driver/替换4/: adc.h
informations/app/ble_sdk_demo/: BUILD.gn  README.md  ble_client_demo.c  ble_client_sdk.c  ble_client_sdk.h  ble_sdk_common.h  ble_server_adv.c  ble_server_adv.h  ble_server_demo.c  ble_server_sdk.c  ble_server_sdk.h
informations/app/door_access/: BUILD.gn  door_access.c  door_access.h  sle_uart_server.c  sle_uart_server.h  sle_uart_server_adv.c  sle_uart_server_adv.h
informations/app/easy_wifi/: README_CN.md
informations/app/easy_wifi/demo/: BUILD.gn  wifi_connect_demo.c
informations/app/easy_wifi/src/: wifi_starter.c
informations/app/gpio_led/: BUILD.gn  gpio_led.c
informations/app/helloworld/: BUILD.gn  helloworld.c
informations/app/oled/: README_CN.md
informations/app/oled/demo/: BUILD.gn  oled_demo.c
informations/app/oled/src/: BUILD.gn  hal_iot_gpio_ex.c  iot_gpio_ex.h  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h
informations/app/pwm_servo/: BUILD.gn  pwm_servo.c
informations/app/sle_sdk_demo/: BUILD.gn  README.md  hal_iot_gpio_ex.c  iot_gpio_ex.h  sle_client_demo.c  sle_client_sdk.c  sle_client_sdk.h  sle_sdk_common.h  sle_server_adv.c  sle_server_adv.h  sle_server_demo.c  sle_server_sdk.h
informations/app/thread/: BUILD.gn  thread.c
informations/app/uart_printf/: BUILD.gn  uart_printf.c
informations/app/uart_tcp_re/: BUILD.gn  README.md  beiyong.c  iot_gpio_ex.h  uart_tcp.c
informations/app/uart_tcp_re/device_pwm/: device_pwm.c  device_pwm.h
informations/app/uart_tcp_re/src/: wifi_connecter.c
informations/app/uart_tcp_re/statu/: statu.c  statu.h
informations/app/uart_uapi_irq/: BUILD.gn  uart_uapi_irq.c
informations/app/uart_uapi_poll/: BUILD.gn  uart_uapi_poll.c
informations/app/wifi_sdk_demo/: BUILD.gn  README.md  wifi_sdk_common.c  wifi_sdk_common.h  wifi_softap_demo.c  wifi_softap_sdk.c  wifi_softap_sdk.h  wifi_sta_demo.c  wifi_sta_sdk.c  wifi_sta_sdk.h  wifi_tcp_client.c  wifi_tcp_client.h  wifi_tcp_common.h  wifi_tcp_server.c  wifi_tcp_server.h
