# Copyright (c) 2026 SZTU Open Source Organization.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("adc_human_demo") {
  sources = [ "adc_human.c" ]

  include_dirs = [
    "//commonlibrary/utils_lite/include",
    "//device/soc/hisilicon/ws63v100/sdk/include",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/liteos/include",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/adc",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/interrupt",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include",
  ]
}