# Copyright (c) 2026 SZTU Open Source Organization.
# 适用平台：九联星闪开发板，海思 WS63E 芯片。
#
#   ble_sdk_role  "server" | "client" — 双板分别编译烧录
#
# 分层（与 wifi_sdk_demo 一致）：
#   ble_*_sdk.c / ble_server_adv.c — 协议栈封装，两种角色均编入
#   ble_server_demo.c / ble_client_demo.c — 按角色只编入其一（含 APP_FEATURE_INIT）

declare_args() {
  ble_sdk_role = "client"
}

static_library("ble_sdk_demo") {
  sources = [
    "ble_server_sdk.c",
    "ble_server_adv.c",
    "ble_client_sdk.c",
  ]

  if (ble_sdk_role == "server") {
    sources += [ "ble_server_demo.c" ]
  } else if (ble_sdk_role == "client") {
    sources += [ "ble_client_demo.c" ]
  } else {
    assert(false, "ble_sdk_role must be \"server\" or \"client\"")
  }

  defines = [
    "CONFIG_UART_SUPPORT_TX",
    "CONFIG_UART_SUPPORT_RX",
  ]

  include_dirs = [
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//utils/native/lite/include",
    "//kernel/liteos_m/components/cmsis/2.0",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/linux/include",
    "//base/startup/init/interfaces/innerkits/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
    "//foundation/communication/bluetooth/interfaces/inner_api/include/c_header",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/bts/ble",
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/bts/common",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/uart",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/uart",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/common_headers/native",
    "//device/soc/hisilicon/ws63v100/sdk/test/common/testsuite/include",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/memory",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/debug",
    ".",
  ]
}
