# Copyright (c) 2026 SZTU Open Source Organization.
# 适用平台：九联星闪开发板，海思 WS63E 芯片。
#
# 按功能选择编译的 .c 文件（不必再手动注释 sources）：
#
#   wifi_sdk_role      "ap" | "sta"   — 板子角色（决定入口 demo + TCP 方向）
#   wifi_sdk_enable_tcp true | false  — 是否编入 TCP 示例
#
# 修改方式（任选其一）：
#   1) 直接改下面 declare_args 的默认值后 make_app.py -b
#   2) GN 传参（完整 hb/gn 构建时）：
#      gn gen <out> --args='wifi_sdk_role="sta" wifi_sdk_enable_tcp=true'
#
# 注意：wifi_sdk_role 只能选一个入口 demo，不可同时编 wifi_sta_demo 与 wifi_softap_demo。

declare_args() {
  # AP 板热点 + TCP Server；"sta" 为 STA 板连 AP + TCP Client
  wifi_sdk_role = "sta"
  wifi_sdk_enable_tcp = true
}

static_library("wifi_sdk_demo") {
  sources = [
    "wifi_sdk_common.c",
    "wifi_sta_sdk.c",
    "wifi_softap_sdk.c",
  ]

  if (wifi_sdk_role == "ap") {
    sources += [ "wifi_softap_demo.c" ]
    if (wifi_sdk_enable_tcp) {
      sources += [ "wifi_tcp_server.c" ]
    }
  } else if (wifi_sdk_role == "sta") {
    sources += [ "wifi_sta_demo.c" ]
    if (wifi_sdk_enable_tcp) {
      sources += [ "wifi_tcp_client.c" ]
    }
  } else {
    assert(false, "wifi_sdk_role must be \"ap\" or \"sta\"")
  }

  defines = [ "LWIP_CONFIG_FILE=\"lwip/lwipopts_default.h\"" ]
  if (wifi_sdk_enable_tcp) {
    defines += [ "WIFI_SDK_ENABLE_TCP=1" ]
  }

  include_dirs = [
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/ws63v100/sdk/open_source/lwip/lwip_v2.1.3/src/include",
    "//device/soc/hisilicon/ws63v100/sdk/open_source/lwip/lwip_adapter/liteos_207/src/include",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/linux/include",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/lock",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/schedule",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/common_headers/native",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/wifi",
  ]
}
